update game index

--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore and purchase exciting games: Word Search Puzzles, Board Games, and more!">
-    <title>GameHub | Play & Shop</title>
+    <title>MaximumRaw-GameHub | Play & Shop</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
@@ -174,7 +174,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>GameHub</h1>
+        <h1>MaximumRaw-GameHub</h1>
         <p>Your one-stop destination for exciting games!</p>
     </header>
 
@@ -193,7 +193,7 @@
         </div>
         <div class="qr-code">
             <img src="qr-code-placeholder.png" alt="Scan QR Code">
-            <p>Scan this QR code to visit GameHub anytime!</p>
+            <p>Scan this QR code to visit GameHub Members anytime!</p>
         </div>
     </section>
 
@@ -230,7 +230,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 GameHub. All rights reserved.</p>
+        <p>&copy; 2025 MaximumRaw-GameHub. All rights reserved.</p>
     </footer>
 </body>
 </html>
