update game index

--- a/games/index.html
+++ b/games/index.html
@@ -174,7 +174,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>MaximumRaw-GameHub</h1>
+        <h1>MaximumRaw GameHub</h1>
         <p>Your one-stop destination for exciting games!</p>
     </header>
 
@@ -230,7 +230,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 MaximumRaw-GameHub. All rights reserved.</p>
+        <p>&copy; 2025 MaximumRaw GameHub. All rights reserved.</p>
     </footer>
 </body>
 </html>
