--- a/games/index.html
+++ b/games/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore and purchase exciting games: Word Search Puzzles, Board Games, and more!">
-    <title>MaximumRaw-GameHub | Play & Shop</title>
+    <title>MaximumRaw GameHub | Play & Shop</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
