--- a/games/index.html
+++ b/games/index.html
@@ -26,30 +26,30 @@
         header {
             background: linear-gradient(45deg, #0078FF, #00D1FF);
             color: #fff;
-            padding: 20px 10%;
+            padding: 20px;
             text-align: center;
         }
 
         header h1 {
-            font-size: 3rem;
+            font-size: 2.5rem;
             margin-bottom: 10px;
         }
 
         header p {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
         }
 
         /* Navigation Bar */
         nav {
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
+            gap: 15px;
+            margin: 15px 0;
         }
 
         nav a {
             text-decoration: none;
-            font-size: 1.1rem;
+            font-size: 1rem;
             color: #0078FF;
             font-weight: bold;
             transition: color 0.3s;
@@ -63,18 +63,20 @@
         .hero {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
-            padding: 20px 10%;
+            padding: 20px;
         }
 
         .hero .content {
             flex: 1;
-            margin-right: 20px;
+            max-width: 500px;
+            margin: 10px;
+            text-align: center;
         }
 
         .hero .content h2 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             color: #0078FF;
         }
 
@@ -86,10 +88,11 @@
         .hero .qr-code {
             flex: 1;
             text-align: center;
+            margin: 10px;
         }
 
         .hero .qr-code img {
-            width: 200px;
+            width: 180px;
             height: auto;
             border: 2px solid #0078FF;
             border-radius: 10px;
@@ -98,7 +101,7 @@
         /* Games Section */
         .games-section {
             background: #fff;
-            padding: 40px 10%;
+            padding: 30px 10px;
         }
 
         .games-section h2 {
@@ -110,13 +113,14 @@
 
         .games-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 15px;
+            padding: 0 10px;
         }
 
         .game-card {
             background: #f9f9f9;
-            padding: 20px;
+            padding: 15px;
             border: 1px solid #ddd;
             border-radius: 10px;
             text-align: center;
@@ -128,29 +132,29 @@
         }
 
         .game-card img {
-            width: 100px;
+            width: 80px;
             height: auto;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         .game-card h3 {
-            font-size: 1.3rem;
+            font-size: 1.2rem;
             color: #0078FF;
             margin-bottom: 10px;
         }
 
         .game-card p {
             font-size: 0.9rem;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         .game-card a {
             text-decoration: none;
-            padding: 10px 20px;
+            padding: 8px 15px;
             background: #0078FF;
             color: #fff;
             border-radius: 5px;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             transition: background 0.3s;
         }
 
@@ -168,6 +172,59 @@
 
         footer p {
             font-size: 0.9rem;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
+
+            .hero .content h2 {
+                font-size: 1.8rem;
+            }
+
+            .hero .content p {
+                font-size: 0.9rem;
+            }
+
+            .hero .qr-code img {
+                width: 150px;
+            }
+
+            nav a {
+                font-size: 0.9rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.8rem;
+            }
+
+            header p {
+                font-size: 1rem;
+            }
+
+            .hero .content h2 {
+                font-size: 1.5rem;
+            }
+
+            .hero .qr-code img {
+                width: 120px;
+            }
+
+            nav a {
+                font-size: 0.8rem;
+            }
+
+            .game-card h3 {
+                font-size: 1rem;
+            }
+
+            .game-card p {
+                font-size: 0.8rem;
+            }
         }
     </style>
 </head>
