--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -138,13 +138,18 @@
         const gridSize = 20;
         const wordsPerGame = 34;
         const allWords = [
-            "ENCRYPTION", "FIREWALL", "HACKER", "PASSWORD", "MALWARE", 
-            "PHISHING", "BACKDOOR", "VIRUS", "SECURITY", "TROJAN", 
-            "SPYWARE", "KEYLOGGER", "PATCH", "AUTHENTICATION", "RANSOMWARE", 
+            "ENCRYPTION", "FIREWALL", "HACKER", "PASSWORD", "MALWARE",
+            "PHISHING", "BACKDOOR", "VIRUS", "SECURITY", "TROJAN",
+            "SPYWARE", "KEYLOGGER", "PATCH", "AUTHENTICATION", "RANSOMWARE",
             "NETWORK", "BREACH", "PROTOCOL", "INTRUSION", "ZERO",
             "HASHING", "CERTIFICATE", "SOFTWARE", "MULTIFACTOR", "EXPLOIT",
             "PRIVACY", "BOTNET", "ATTACK", "DEFENSE", "RISK",
-            "VULNERABILITY", "FORENSICS", "ACCESS", "CONTROL", "PROTECTION"
+            "VULNERABILITY", "FORENSICS", "ACCESS", "CONTROL", "PROTECTION",
+            "ENCRYPTIONKEY", "ENDPOINT", "DDoS", "FIRMWARE", "ROOTKIT",
+            "CYBERTHREAT", "SECURITYAUDIT", "SOC", "THREATINTELLIGENCE", "SANDBOX",
+            "PRIVILEGEESCALATION", "SECUREBOOT", "SECURITYPOLICY", "THREATACTOR", "DIGITALSIGNATURE",
+            "SESSIONHIJACKING", "CRYPTOGRAPHY", "DATAEXFILTRATION", "APPLICATIONSECURITY", "SECURESOCKETLAYER",
+            "CYBERSECURITY", "DATALEAK", "THREATHUNTING", "INTRUSIONDETECTION", "SECURECHANNEL"
         ];
 
         let words = [];
