--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -148,8 +148,8 @@
             "ENCRYPTIONKEY", "ENDPOINT", "DDoS", "FIRMWARE", "ROOTKIT",
             "CYBERTHREAT", "SECURITYAUDIT", "SOC", "THREATINTELLIGENCE", "SANDBOX",
             "PRIVILEGEESCALATION", "SECUREBOOT", "SECURITYPOLICY", "THREATACTOR", "DIGITALSIGNATURE",
-            "SESSIONHIJACKING", "CRYPTOGRAPHY", "DATAEXFILTRATION", "APPLICATIONSECURITY", "SECURESOCKETLAYER",
-            "CYBERSECURITY", "DATALEAK", "THREATHUNTING", "INTRUSIONDETECTION", "SECURECHANNEL"
+            "SESSIONHIJACKING", "CRYPTOGRAPHY", "DATAEXFILTRATION", "APPSECURITY", "SECURESOCKETLAYER",
+            "CYBERSECURITY", "DATALEAK", "THREATHUNTING", "SECURECHANNEL"
         ];
 
         let words = [];
