--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -146,7 +146,7 @@
             "PRIVACY", "BOTNET", "ATTACK", "DEFENSE", "RISK",
             "VULNERABILITY", "FORENSICS", "ACCESS", "CONTROL", "PROTECTION",
             "ENCRYPTIONKEY", "ENDPOINT", "DDoS", "FIRMWARE", "ROOTKIT",
-            "CYBERTHREAT", "SECURITYAUDIT", "SOC", "THREATINTELLIGENCE", "SANDBOX",
+            "CYBERTHREAT", "SECURITYAUDIT", "SOC", "THREATINTELS", "SANDBOX",
             "PRIVILEGEESCALATION", "SECUREBOOT", "SECURITYPOLICY", "THREATACTOR", "DIGITALSIGNATURE",
             "SESSIONHIJACKING", "CRYPTOGRAPHY", "DATAEXFILTRATION", "APPSECURITY", "SECURESOCKETLAYER",
             "CYBERSECURITY", "DATALEAK", "THREATHUNTING", "SECURECHANNEL"
