--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -147,8 +147,8 @@
             "VULNERABILITY", "FORENSICS", "ACCESS", "CONTROL", "PROTECTION",
             "ENCRYPTIONKEY", "ENDPOINT", "DDoS", "FIRMWARE", "ROOTKIT",
             "CYBERTHREAT", "SECURITYAUDIT", "SOC", "THREATINTELS", "SANDBOX",
-            "PRIVILEGEESCALATION", "SECUREBOOT", "SECURITYPOLICY", "THREATACTOR", "DIGITALSIGNATURE",
-            "SESSIONHIJACKING", "CRYPTOGRAPHY", "DATAEXFILTRATION", "APPSECURITY", "SECURESOCKETLAYER",
+            "PRIVILEGEESC", "SECUREBOOT", "SECURITYPOLICY", "THREATACTOR", "DIGITALSIGNATURE",
+            "SESSIONHIJACK", "CRYPTOGRAPHY", "DATAEXFILTRATION", "APPSECURITY", "SECURESOCKETLAYER",
             "CYBERSECURITY", "DATALEAK", "THREATHUNTING", "SECURECHANNEL"
         ];
 
