--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -147,8 +147,8 @@
             "VULNERABILITY", "FORENSICS", "ACCESS", "CONTROL", "PROTECTION",
             "ENCRYPTIONKEY", "ENDPOINT", "DDoS", "FIRMWARE", "ROOTKIT",
             "CYBERTHREAT", "SECURITYAUDIT", "SOC", "THREATINTELS", "SANDBOX",
-            "PRIVILEGEESC", "SECUREBOOT", "SECURITYPOLICY", "THREATACTOR", "DIGITALSIGNATURE",
-            "SESSIONHIJACK", "CRYPTOGRAPHY", "DATAEXFILTRATION", "APPSECURITY", "SECURESOCKETLAYER",
+            "PRIVILEGEESC", "SECUREBOOT", "SECURITYPOLICY", "THREATACTOR", "DIGITALSIG",
+            "SESSIONHIJACK", "CRYPTOGRAPHY", "DATAEXFILT", "APPSECURITY", "SECURESOCLAYER",
             "CYBERSECURITY", "DATALEAK", "THREATHUNTING", "SECURECHANNEL"
         ];
 
