--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -148,7 +148,7 @@
             "ENCRYPTIONKEY", "ENDPOINT", "DDoS", "FIRMWARE", "ROOTKIT",
             "CYBERTHREAT", "SECURITYAUDIT", "SOC", "THREATINTELS", "SANDBOX",
             "PRIVILEGEESC", "SECUREBOOT", "SECURITYPOLICY", "THREATACTOR", "DIGITALSIG",
-            "SESSIONHIJACK", "CRYPTOGRAPHY", "DATAEXFILT", "APPSECURITY", "SECURESOCLAYER",
+            "SESSIONHIJACK", "CRYPTOGRAPHY", "DATAEXFILT", "APPSECURITY", "SECURESOCKET",
             "CYBERSECURITY", "DATALEAK", "THREATHUNTING", "SECURECHANNEL"
         ];
 
