UPDATEE CYBERGAME.HTML

--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -153,13 +153,36 @@
         const gridSize = 20;
         const wordsPerGame = 24;  // Restored to original 34 words
         const allWords = [
-            "ENCRYPTION", "FIREWALL", "HACKER", "PASSWORD", "MALWARE",
-            "PHISHING", "BACKDOOR", "VIRUS", "SECURITY", "TROJAN",
-            "SPYWARE", "KEYLOGGER", "PATCH", "AUTHENTICATION", "RANSOMWARE",
-            "NETWORK", "BREACH", "PROTOCOL", "INTRUSION", "ZERO",
-            "HASHING", "CERTIFICATE", "SOFTWARE", "MULTIFACTOR", "EXPLOIT",
-            "PRIVACY", "BOTNET", "ATTACK", "DEFENSE", "RISK",
-            "VULNERABILITY", "FORENSICS", "ACCESS", "CONTROL", "PROTECTION"
+"ENCRYPTION", "FIREWALL", "HACKER", "PASSWORD", "MALWARE",  
+"PHISHING", "BACKDOOR", "VIRUS", "SECURITY", "TROJAN",  
+"SPYWARE", "KEYLOGGER", "PATCH", "AUTHENTICATION", "RANSOMWARE",  
+"NETWORK", "BREACH", "PROTOCOL", "INTRUSION", "ZERODAY",  
+"HASHING", "CERTIFICATE", "SOFTWARE", "MULTIFACTOR", "EXPLOIT",  
+"PRIVACY", "BOTNET", "ATTACK", "DEFENSE", "RISK",  
+"VULNERABILITY", "FORENSICS", "ACCESS", "CONTROL", "PROTECTION",  
+"FRAUD", "DECRYPTION", "INJECTION", "CLUSTER", "RAT",  
+"PHISH", "BOTS", "FLOODING", "ACCESSORY", "SERVER",  
+"VULNERABLE", "CRYPTOGRAPHY", "TRAFFIC", "HARDENING", "TUNNEL",  
+"SECURE", "LOGGING", "MONITORING", "MFA", "BACKUP",  
+"BREACHING", "LOCKDOWN", "CIPHER", "EXPLOITATION", "IMPERSONATION",  
+"TRACEROUTE", "BYPASS", "THREAT", "ENCRYPT", "ANTIVIRUS",  
+"UPGRADE", "TRACKING", "REMOTE", "SECURITY_POLICY", "ENCLAVE",  
+"HEURISTICS", "MANAGEMENT", "ACCESSIBLE", "INTERCEPT", "ENDPOINT",  
+"ENHANCED", "EXPOSURE", "COMPLIANCE", "DISASTER", "DEFLECT",  
+"CONFIGURATION", "PATCHING", "AUTOMATION", "DETECTION", "PREDICTION",  
+"FORCEFIELD", "ISOLATION", "DEACTIVATE", "OBFUSCATION", "AUTOTASK",  
+"CLONING", "STEALTH", "CONTROLLED", "ANALYTICS", "VISUALIZATION",  
+"REMEDIATION", "FINGERPRINT", "ISOLATE", "DATA_LEAK", "SANDOX",  
+"LOGICAL", "SYNCHRONIZE", "EXTRUSION", "TRADEOFF", "COVERT",  
+"RECONNAISSANCE", "FUSION", "TRACKER", "INTERCEPTION", "DEFLECTOR",  
+"AUTHORIZATION", "FORGERY", "BLOCKCHAIN", "DATA_MINE", "BREACHER",  
+"RECON", "LATERAL", "BLAST", "MONITOR", "TRADE_SECRET",  
+"STEALTHY", "CIRCULAR", "RELIABLE", "FILTER", "TESTER",  
+"CLIENT", "CERTIFY", "FILTERING", "REMOVAL", "COMPROMISED",  
+"OBSCURE", "RECONNECTION", "FIREWALLS", "INFRASTRUCTURE", "REMOTE_ACCESS",  
+"NETWORKING", "QUARANTINE", "AGENT", "CORRUPT", "REDTEAM",  
+"SECURE_HOST", "HEALTHCHECK", "SIMULATOR", "PSEUDONYM", "FAKERY"
+
         ];
 
         class WordSearch {
