updating cybergame.html

--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -166,22 +166,22 @@
 "SECURE", "LOGGING", "MONITORING", "MFA", "BACKUP",  
 "BREACHING", "LOCKDOWN", "CIPHER", "EXPLOITATION", "IMPERSONATION",  
 "TRACEROUTE", "BYPASS", "THREAT", "ENCRYPT", "ANTIVIRUS",  
-"UPGRADE", "TRACKING", "REMOTE", "SECURITY_POLICY", "ENCLAVE",  
+"UPGRADE", "TRACKING", "REMOTE", "SECURITYPOLICY", "ENCLAVE",  
 "HEURISTICS", "MANAGEMENT", "ACCESSIBLE", "INTERCEPT", "ENDPOINT",  
 "ENHANCED", "EXPOSURE", "COMPLIANCE", "DISASTER", "DEFLECT",  
 "CONFIGURATION", "PATCHING", "AUTOMATION", "DETECTION", "PREDICTION",  
 "FORCEFIELD", "ISOLATION", "DEACTIVATE", "OBFUSCATION", "AUTOTASK",  
 "CLONING", "STEALTH", "CONTROLLED", "ANALYTICS", "VISUALIZATION",  
-"REMEDIATION", "FINGERPRINT", "ISOLATE", "DATA_LEAK", "SANDOX",  
+"REMEDIATION", "FINGERPRINT", "ISOLATE", "DATALEAK", "SANDOX",  
 "LOGICAL", "SYNCHRONIZE", "EXTRUSION", "TRADEOFF", "COVERT",  
 "RECONNAISSANCE", "FUSION", "TRACKER", "INTERCEPTION", "DEFLECTOR",  
-"AUTHORIZATION", "FORGERY", "BLOCKCHAIN", "DATA_MINE", "BREACHER",  
-"RECON", "LATERAL", "BLAST", "MONITOR", "TRADE_SECRET",  
+"AUTHORIZATION", "FORGERY", "BLOCKCHAIN", "DATAMINE", "BREACHER",  
+"RECON", "LATERAL", "BLAST", "MONITOR", "TRADESECRET",  
 "STEALTHY", "CIRCULAR", "RELIABLE", "FILTER", "TESTER",  
 "CLIENT", "CERTIFY", "FILTERING", "REMOVAL", "COMPROMISED",  
-"OBSCURE", "RECONNECTION", "FIREWALLS", "INFRASTRUCTURE", "REMOTE_ACCESS",  
+"OBSCURE", "RECONNECTION", "FIREWALLS", "INFRASTRUCTURE", "REMOTEACCESS",  
 "NETWORKING", "QUARANTINE", "AGENT", "CORRUPT", "REDTEAM",  
-"SECURE_HOST", "HEALTHCHECK", "SIMULATOR", "PSEUDONYM", "FAKERY"
+"SECUREHOST", "HEALTHCHECK", "SIMULATOR", "PSEUDONYM", "FAKERY"
 
         ];
 
