--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cybersecurity Word Search</title>
+    <title>MaximumRaw Cybersecurity Word Search</title>
     <style>
         /* Keep all original CSS unchanged */
         body {
@@ -142,7 +142,7 @@
     </style>
 </head>
 <body>
-    <h1 class="title">Cybersecurity Word Search</h1>
+    <h1 class="title">MaximumRaw Cybersecurity Word Search</h1>
     <button class="reset-button" id="resetButton">New Game</button>
     <div class="grid-container">
         <div class="grid" id="grid"></div>
