--- a/games/index.html
+++ b/games/index.html
@@ -254,7 +254,7 @@
             <p>Explore the best games, from puzzles to board games, and play directly from your device after scanning the QR code below.</p>
         </div>
         <div class="qr-code">
-            <a href="https://example.com/qr-link" target="_blank">
+            <a href="https://www.maximumraw.com/games/cybergame.html" target="_blank">
                 <img src="qr-code.png" alt="Scan QR Code">
             </a>
             <p>Scan this QR code or click to visit GameHub Members!</p>
