update index pages

--- a/games/cybergame.html
+++ b/games/cybergame.html
@@ -468,5 +468,9 @@
             game.initializeGame();
         });
     </script>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2019-2025 MaximumRaw GameHub. All rights reserved.</p>
+    </footer>
 </body>
 </html>
