--- a/games/index.html
+++ b/games/index.html
@@ -294,7 +294,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 MaximumRaw GameHub. All rights reserved.</p>
+        <p>&copy; 2019-2025 MaximumRaw GameHub. All rights reserved.</p>
     </footer>
 
     <!-- Automatic User Data Collection -->
