--- a/games/jigsaw.html
+++ b/games/jigsaw.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jigsaw Puzzle Game</title>
+    <title>Responsive Jigsaw Puzzle</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            -webkit-tap-highlight-color: transparent;
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f0f0f0;
-            padding: 1rem;
+            background-color: #f9f9f9;
+            padding: 0;
         }
 
         .container {
@@ -41,78 +40,64 @@
 
         .button {
             padding: 0.75rem 1rem;
-            background-color: #2563eb;
-            color: white;
+            background-color: #007BFF;
+            color: #fff;
             border: none;
             border-radius: 0.375rem;
-            cursor: pointer;
             font-size: 1rem;
-            transition: background-color 0.2s;
-            flex: 1;
-            max-width: 200px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
 
         .button:hover {
-            background-color: #1d4ed8;
+            background-color: #0056b3;
         }
 
         .puzzle-container {
-            background-color: white;
-            padding: 0.5rem;
-            border-radius: 0.5rem;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
             width: 100%;
+            aspect-ratio: 1; /* Ensures the puzzle remains square */
+            position: relative;
+            overflow: hidden;
+            background-color: #ddd;
+            border-radius: 0.5rem;
         }
 
         .puzzle-grid {
             display: grid;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             gap: 2px;
-            background-color: #e5e7eb;
-            padding: 0.5rem;
-            border-radius: 0.375rem;
         }
 
         .puzzle-piece {
-            width: 100%;
-            cursor: pointer;
-            transition: transform 0.2s, box-shadow 0.2s;
+            position: relative;
             background-size: 100%;
-        }
-
-        .puzzle-piece::before {
-            content: '';
-            display: block;
-            padding-top: 100%;
+            cursor: pointer;
+            transition: transform 0.2s;
         }
 
         .puzzle-piece:hover {
             transform: scale(1.05);
         }
 
-        .puzzle-piece.selected {
-            box-shadow: 0 0 0 3px #2563eb;
-        }
-
         .complete-message {
-            color: #16a34a;
+            color: #28a745;
             font-weight: bold;
-            margin-top: 1rem;
-            display: none;
             text-align: center;
             padding: 1rem;
-            background-color: #dcfce7;
+            background-color: #d4edda;
             border-radius: 0.375rem;
             width: 100%;
+            display: none;
         }
 
         @media (max-width: 480px) {
-            .controls {
-                gap: 0.25rem;
-            }
-
             .button {
-                padding: 0.5rem;
                 font-size: 0.875rem;
+                padding: 0.5rem;
             }
         }
     </style>
@@ -123,10 +108,6 @@
             <button class="button" onclick="initializePuzzle()">New Puzzle</button>
             <button class="button" onclick="switchImage()">Change Image</button>
             <button class="button" onclick="changeGridSize()">Change Grid Size</button>
-            <label class="button">
-                <input type="file" accept="image/*" style="display: none;" onchange="uploadImage(event)">
-                Upload Image
-            </label>
         </div>
 
         <div class="puzzle-container">
@@ -185,6 +166,7 @@
                 pieceElement.style.order = piece.currentPos;
                 pieceElement.style.backgroundImage = `url(${puzzleImages[currentImage]})`;
                 pieceElement.style.backgroundPosition = getBackgroundPosition(piece.correctPos);
+                pieceElement.style.aspectRatio = "1"; // Keep pieces square
                 pieceElement.style.backgroundSize = `${gridSize * 100}%`;
 
                 pieceElement.addEventListener("click", () => handlePieceClick(piece));
@@ -201,10 +183,8 @@
         function handlePieceClick(clickedPiece) {
             if (selectedPiece === null) {
                 selectedPiece = clickedPiece;
-                document.querySelectorAll(".puzzle-piece")[clickedPiece.currentPos].classList.add("selected");
             } else if (selectedPiece !== clickedPiece) {
                 swapPieces(selectedPiece, clickedPiece);
-                document.querySelectorAll(".puzzle-piece")[selectedPiece.currentPos].classList.remove("selected");
                 selectedPiece = null;
                 checkCompletion();
             }
@@ -214,7 +194,6 @@
             const tempPos = pieceA.currentPos;
             pieceA.currentPos = pieceB.currentPos;
             pieceB.currentPos = tempPos;
-
             renderPuzzle();
         }
 
@@ -231,22 +210,9 @@
         }
 
         function changeGridSize() {
-            gridSize = prompt("Enter new grid size (e.g., 3 for 3x3, 4 for 4x4):", gridSize) || gridSize;
-            gridSize = Math.max(2, Math.min(10, parseInt(gridSize, 10)));
+            const newSize = prompt("Enter new grid size (2-10):", gridSize);
+            gridSize = Math.max(2, Math.min(10, parseInt(newSize, 10)));
             initializePuzzle();
-        }
-
-        function uploadImage(event) {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = () => {
-                    puzzleImages.push(reader.result);
-                    currentImage = puzzleImages.length - 1;
-                    initializePuzzle();
-                };
-                reader.readAsDataURL(file);
-            }
         }
 
         window.onload = initializePuzzle;
