--- a/games/jigsaw.html
+++ b/games/jigsaw.html
@@ -53,6 +53,25 @@
             background-color: #0056b3;
         }
 
+        .file-input {
+            display: none;
+        }
+
+        .upload-label {
+            padding: 0.75rem 1rem;
+            background-color: #28a745;
+            color: #fff;
+            border: none;
+            border-radius: 0.375rem;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .upload-label:hover {
+            background-color: #218838;
+        }
+
         .puzzle-container {
             width: 100%;
             aspect-ratio: 1; /* Ensures the puzzle remains square */
@@ -95,7 +114,7 @@
         }
 
         @media (max-width: 480px) {
-            .button {
+            .button, .upload-label {
                 font-size: 0.875rem;
                 padding: 0.5rem;
             }
@@ -108,6 +127,8 @@
             <button class="button" onclick="initializePuzzle()">New Puzzle</button>
             <button class="button" onclick="switchImage()">Change Image</button>
             <button class="button" onclick="changeGridSize()">Change Grid Size</button>
+            <label for="fileInput" class="upload-label">Upload Image</label>
+            <input type="file" id="fileInput" class="file-input" accept="image/*" onchange="uploadImage(event)">
         </div>
 
         <div class="puzzle-container">
@@ -129,6 +150,7 @@
             "https://www.maximumraw.com/games/noahsark.jpeg",
             "https://www.maximumraw.com/games/dubai.jpeg"
         ];
+        let uploadedImage = null;
 
         function createPieces() {
             pieces = [];
@@ -164,7 +186,9 @@
                 const pieceElement = document.createElement("div");
                 pieceElement.className = "puzzle-piece";
                 pieceElement.style.order = piece.currentPos;
-                pieceElement.style.backgroundImage = `url(${puzzleImages[currentImage]})`;
+
+                const imageUrl = uploadedImage || puzzleImages[currentImage];
+                pieceElement.style.backgroundImage = `url(${imageUrl})`;
                 pieceElement.style.backgroundPosition = getBackgroundPosition(piece.correctPos);
                 pieceElement.style.aspectRatio = "1"; // Keep pieces square
                 pieceElement.style.backgroundSize = `${gridSize * 100}%`;
@@ -206,6 +230,7 @@
 
         function switchImage() {
             currentImage = (currentImage + 1) % puzzleImages.length;
+            uploadedImage = null;
             initializePuzzle();
         }
 
@@ -213,6 +238,18 @@
             const newSize = prompt("Enter new grid size (2-10):", gridSize);
             gridSize = Math.max(2, Math.min(10, parseInt(newSize, 10)));
             initializePuzzle();
+        }
+
+        function uploadImage(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    uploadedImage = e.target.result;
+                    initializePuzzle();
+                };
+                reader.readAsDataURL(file);
+            }
         }
 
         window.onload = initializePuzzle;
