--- a/games/jigsaw.html
+++ b/games/jigsaw.html
@@ -245,6 +245,8 @@
                     initializePuzzle();
                 };
                 reader.readAsDataURL(file);
+            } else {
+                alert("Please select a valid image.");
             }
         }
 
