--- a/games/jigsaw.html
+++ b/games/jigsaw.html
@@ -9,7 +9,6 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            -webkit-tap-highlight-color: transparent;
         }
 
         body {
@@ -19,7 +18,7 @@
             align-items: center;
             min-height: 100vh;
             background-color: #f9f9f9;
-            padding: 1rem;
+            padding: 0;
         }
 
         .container {
@@ -42,68 +41,82 @@
         .button {
             padding: 0.75rem 1rem;
             background-color: #007BFF;
-            color: white;
+            color: #fff;
             border: none;
             border-radius: 0.375rem;
             font-size: 1rem;
             cursor: pointer;
             transition: background-color 0.3s;
-            flex: 1;
-            max-width: 200px;
         }
 
         .button:hover {
             background-color: #0056b3;
         }
 
+        .file-input {
+            display: none;
+        }
+
+        .upload-label {
+            padding: 0.75rem 1rem;
+            background-color: #28a745;
+            color: #fff;
+            border: none;
+            border-radius: 0.375rem;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .upload-label:hover {
+            background-color: #218838;
+        }
+
         .puzzle-container {
-            background-color: white;
-            padding: 0.5rem;
-            border-radius: 0.5rem;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
             width: 100%;
+            aspect-ratio: 1;
+            position: relative;
+            overflow: hidden;
+            background-color: #ddd;
+            border-radius: 0.5rem;
         }
 
         .puzzle-grid {
             display: grid;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             gap: 2px;
-            background-color: #e5e7eb;
-            padding: 0.5rem;
-            border-radius: 0.375rem;
         }
 
         .puzzle-piece {
-            width: 100%;
+            position: relative;
+            background-size: cover;
             cursor: pointer;
-            background-size: 100%;
+            transition: transform 0.2s;
         }
 
-        .puzzle-piece::before {
-            content: '';
-            display: block;
-            padding-top: 100%;
+        .puzzle-piece:hover {
+            transform: scale(1.05);
         }
 
         .complete-message {
-            color: #16a34a;
+            color: #28a745;
             font-weight: bold;
-            margin-top: 1rem;
-            display: none;
             text-align: center;
             padding: 1rem;
-            background-color: #dcfce7;
+            background-color: #d4edda;
             border-radius: 0.375rem;
             width: 100%;
+            display: none;
         }
 
         @media (max-width: 480px) {
-            .controls {
-                gap: 0.25rem;
-            }
-
-            .button {
-                padding: 0.5rem;
+            .button, .upload-label {
                 font-size: 0.875rem;
+                padding: 0.5rem;
             }
         }
     </style>
@@ -114,10 +127,8 @@
             <button class="button" onclick="initializePuzzle()">New Puzzle</button>
             <button class="button" onclick="switchImage()">Change Image</button>
             <button class="button" onclick="changeGridSize()">Change Grid Size</button>
-            <label class="button">
-                <input type="file" accept="image/*" style="display: none;" onchange="uploadImage(event)">
-                Upload Image
-            </label>
+            <label for="fileInput" class="upload-label">Upload Image</label>
+            <input type="file" id="fileInput" class="file-input" accept="image/*" onchange="uploadImage(event)">
         </div>
 
         <div class="puzzle-container">
@@ -177,11 +188,11 @@
                 pieceElement.style.order = piece.currentPos;
 
                 const imageUrl = uploadedImage || puzzleImages[currentImage];
-                pieceElement.style.backgroundImage = `url(${imageUrl})`;
-
                 const row = Math.floor(piece.correctPos / gridSize);
                 const col = piece.correctPos % gridSize;
+                pieceElement.style.backgroundImage = `url(${imageUrl})`;
                 pieceElement.style.backgroundPosition = `${(col * 100) / (gridSize - 1)}% ${(row * 100) / (gridSize - 1)}%`;
+                pieceElement.style.aspectRatio = "1";
                 pieceElement.style.backgroundSize = `${gridSize * 100}%`;
 
                 pieceElement.addEventListener("click", () => handlePieceClick(piece));
@@ -190,7 +201,7 @@
         }
 
         function handlePieceClick(clickedPiece) {
-            if (!selectedPiece) {
+            if (selectedPiece === null) {
                 selectedPiece = clickedPiece;
             } else if (selectedPiece !== clickedPiece) {
                 swapPieces(selectedPiece, clickedPiece);
@@ -220,7 +231,7 @@
         }
 
         function changeGridSize() {
-            const newSize = prompt("Enter new grid size (e.g., 3, 4):", gridSize);
+            const newSize = prompt("Enter new grid size (2-10):", gridSize);
             gridSize = Math.max(2, Math.min(10, parseInt(newSize, 10)));
             initializePuzzle();
         }
@@ -234,8 +245,14 @@
                     initializePuzzle();
                 };
                 reader.readAsDataURL(file);
+            } else {
+                alert("Please select a valid image.");
             }
         }
+
+        document.querySelector('.upload-label').addEventListener('click', function() {
+            document.querySelector('#fileInput').click();
+        });
 
         window.onload = initializePuzzle;
     </script>
