--- a/games/jigsaw.html
+++ b/games/jigsaw.html
@@ -18,7 +18,6 @@
             align-items: center;
             min-height: 100vh;
             background-color: #f9f9f9;
-            padding: 0;
         }
 
         .container {
@@ -38,7 +37,7 @@
             justify-content: center;
         }
 
-        .button {
+        .button, .upload-label {
             padding: 0.75rem 1rem;
             background-color: #007BFF;
             color: #fff;
@@ -53,28 +52,21 @@
             background-color: #0056b3;
         }
 
-        .file-input {
-            display: none;
-        }
-
         .upload-label {
-            padding: 0.75rem 1rem;
             background-color: #28a745;
-            color: #fff;
-            border: none;
-            border-radius: 0.375rem;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s;
         }
 
         .upload-label:hover {
             background-color: #218838;
         }
 
+        .file-input {
+            display: none;
+        }
+
         .puzzle-container {
             width: 100%;
-            aspect-ratio: 1; /* Ensures the puzzle remains square */
+            aspect-ratio: 1; /* Keeps the container square */
             position: relative;
             overflow: hidden;
             background-color: #ddd;
@@ -93,6 +85,7 @@
 
         .puzzle-piece {
             position: relative;
+            background-repeat: no-repeat;
             background-size: 100%;
             cursor: pointer;
             transition: transform 0.2s;
@@ -111,13 +104,6 @@
             border-radius: 0.375rem;
             width: 100%;
             display: none;
-        }
-
-        @media (max-width: 480px) {
-            .button, .upload-label {
-                font-size: 0.875rem;
-                padding: 0.5rem;
-            }
         }
     </style>
 </head>
@@ -145,12 +131,13 @@
         let pieces = [];
         let selectedPiece = null;
         let currentImage = 0;
+        let uploadedImage = null;
+        let imageAspectRatio = 1; // Default square
 
         const puzzleImages = [
             "https://www.maximumraw.com/games/noahsark.jpeg",
             "https://www.maximumraw.com/games/dubai.jpeg"
         ];
-        let uploadedImage = null;
 
         function createPieces() {
             pieces = [];
@@ -188,15 +175,17 @@
                 pieceElement.style.order = piece.currentPos;
 
                 const imageUrl = uploadedImage || puzzleImages[currentImage];
-                pieceElement.style.backgroundImage = `url(${imageUrl})`;
-
-                // Adjust background size and position
-                const sizePercentage = 100 * gridSize;
+                const backgroundSize = imageAspectRatio >= 1
+                    ? `${gridSize * 100}% auto`
+                    : `auto ${gridSize * 100}%`;
+                
                 const x = (piece.correctPos % gridSize) * (100 / (gridSize - 1));
                 const y = Math.floor(piece.correctPos / gridSize) * (100 / (gridSize - 1));
+                const backgroundPosition = `${x}% ${y}%`;
 
-                pieceElement.style.backgroundSize = `${sizePercentage}% ${sizePercentage}%`;
-                pieceElement.style.backgroundPosition = `${x}% ${y}%`;
+                pieceElement.style.backgroundImage = `url(${imageUrl})`;
+                pieceElement.style.backgroundSize = backgroundSize;
+                pieceElement.style.backgroundPosition = backgroundPosition;
                 pieceElement.style.aspectRatio = "1"; // Keep pieces square
 
                 pieceElement.addEventListener("click", () => handlePieceClick(piece));
@@ -231,6 +220,7 @@
         function switchImage() {
             currentImage = (currentImage + 1) % puzzleImages.length;
             uploadedImage = null;
+            imageAspectRatio = 1; // Reset aspect ratio for default images
             initializePuzzle();
         }
 
@@ -245,8 +235,13 @@
             if (file) {
                 const reader = new FileReader();
                 reader.onload = (e) => {
-                    uploadedImage = e.target.result;
-                    initializePuzzle();
+                    const img = new Image();
+                    img.onload = () => {
+                        uploadedImage = e.target.result;
+                        imageAspectRatio = img.width / img.height;
+                        initializePuzzle();
+                    };
+                    img.src = e.target.result;
                 };
                 reader.readAsDataURL(file);
             }
